--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-big-calendar": "^1.8.12",
     "moment": "^2.30.1",
     "next": "14.2.5",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-big-calendar": "^1.14.1",
     "react-calendar": "^5.0.0",
